2004-05-02  n1xt3r  <n1xt3r@scorcher>

	* ChangeLog, docs/nanoblogger.html:
	Updated "Tips and Tricks" section of manual.

	* docs/nanoblogger.html:
	Added "Settings and Configuration" section to the manual.

	* default/parts/2004-01.htm, default/parts/archive_links.htm, default/parts/blog_status.htm, default/parts/cal-2004-01.htm, default/parts/cal.htm, default/parts/entry_links.htm, default/parts/fortune.htm, default/parts/month_links.htm, default/parts/news.htm, default/parts/recent_entries.htm, default/archives/monthly/2004-01.html, default/atom.xml, default/index.html:
	Updated default entry.

	* default/atom.xml, default/index.html: Workaround for CVS bugs.

	* ChangeLog, default/atom.xml, default/index.html, default/parts/older_entries.htm:
	Repository update.

2004-05-01  n1xt3r  <n1xt3r@scorcher>

	* ChangeLog, default/atom.xml, default/index.html:
	Added missing default directories?

	* ChangeLog, default/parts/cat_1.db.htm, default/parts/category_links.htm, default/parts/news.rdf, default/parts/tidy.html:
	Removed obsolete files from default directory.

	* ChangeLog, default/archives.html, default/archives/2004-01-18T17_12_12.htm, default/archives/cat_1.html, default/atom.xml, default/index.html, default/index.rdf, default/parts/cat_links.htm, default/parts/tidy.htm:
	Updated NanoBlogger's Help entry in default.

	* default/blog.conf, nb:
	- (nb_main): Removed prompt for editor to simplify blog creation.
	- Updated EDITOR comment in blog.conf

	* default/blog.conf, nb: - (nb_main): Rephrased editor question.
	- Rephrased EDITOR comment.

	* docs/nanoblogger.html:
	- Replaced "Usage" section with new "Getting Started" section.
	- Renamed "Building the Blog" section to "Templates and Placeholders".
	- Updated templates and plugin information.
	- Cleaned up organization and removed unnecessary material in manual.

2004-04-30  n1xt3r  <n1xt3r@scorcher>

	* ChangeLog, default/templates/rdf.xml, default/templates/rdf_catfeed.xml: