@@ -1,3 +1,8 @@
+2004-05-04  n1xt3r  <n1xt3r@scorcher>
+
+	* ChangeLog, plugins/autoformat/auto_break.sh:
+	Reverted auto formmating back to old behaviour.
+
 2004-05-02  n1xt3r  <n1xt3r@scorcher>
 
 	* ChangeLog, docs/nanoblogger.html:
